# RePaint-Public

./: .gitignore  ActionMaster.cpp  ActionMaster.h  ArtMaster.h  Brushes.cpp  Enums.h  Eserver.pro  NetServer.cpp  NetSocket.cpp  NetSocket.h  README.md  Repaint.ini  Repaint.pro  b_smartcolor.cpp  bctl_dblslider.cpp  bctl_hoverbrush.cpp  bctl_imagewidget.cpp  bctl_widgetholder.cpp  bctl_widgetholder.h  brushparam.cpp  brushparam.h  c_keylink.cpp  c_keylink.h  ctl_BMselector.cpp  ctl_assetview.h  ctl_bparam.cpp  ctl_brushsizer.h  ctl_colorpicker.cpp  ctl_colorwheel.cpp  ctl_fastbrush.cpp  ctl_friendlist.h  ctl_maskselect.h  ctl_trueop.cpp  ctl_trueop.h  ctl_usertools.h  dlg_newcanvas.cpp  dlg_usersearch.h  imagearray.h  imagebox.cpp  mnetmaster.cpp  (+7 more)
Backend/: ESwindow.cpp  ESwindow.h  dbkeeper.cpp  mnetmaster.h  netmaster.cpp
Noise/: clouds.png_
PYServer/: server.py
Source/: ActionMaster.cpp  ActionMaster.h  ArtMaster.cpp  ArtMaster.h  ArtThread.cpp  ArtThread.h  BrushEditorPresenter.cpp  BrushEditorPresenter.h  BrushModel.cpp  BrushModel.h  Brushes.cpp  Brushes.h  CMakeLists.txt  ESmain.cpp  ESwindow.cpp  ESwindow.h  Enums.h  GEOmaster.cpp  LICENSE  LayerActionQueue.cpp  LayerActionQueue.h  LayersPanelPresenter.cpp  LayersPanelPresenter.h  MHPwindow.cpp  MHPwindow.h  NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h  NetSocket.cpp  NetSocket.h  Repaint.ini  Repaint.pro  Repaint_resource.rc  b_smartcolor.cpp  b_smartcolor.h  back1_001.ELI  bctl_dblslider.cpp  bctl_dblslider.h  bctl_hoverbrush.cpp  (+61 more)
Source/BrushEngine/: BrushStamp.hpp  ClientBrushStamp.hpp  DialModel.hpp  LegacySharedBrush.hpp  NetBrushStamp.hpp
Source/NetworkDTO/: NetworkDTO.hpp
Source/ReMath/: ReMath.hpp
Source/SharedNetCode/: NetStructures.h
Source/res/: curdrad_2.cur
Source/sets/: Presets.dat_
bin_Win32/: Repaint.ini
bin_Win32/res/: curDrag.cur
bin_Win64/: Repaint.ini
bin_Win64/res/: curZoom.cur
bin_Win64/sets/: Presets.dat_old
